--- a/apps/mull-ui/src/app/components/custom-file-upload/custom-file-upload.scss
+++ b/apps/mull-ui/src/app/components/custom-file-upload/custom-file-upload.scss
@@ -47,11 +47,6 @@
 
 .custom-file-upload-icon {
   color: $primary-color;
-  &:active {
-    border: 0.05rem solid;
-    background-color: $inactive-button-color;
-    border-radius: 100%;
-  }
 }
 
 .error-message {
