--- a/apps/mull-ui/src/app/components/navigation/sub-nav-bar/chat-header.scss
+++ b/apps/mull-ui/src/app/components/navigation/sub-nav-bar/chat-header.scss
@@ -2,7 +2,7 @@
 
 .header {
   background-color: $background-color;
-  padding: 0.5rem 0;
+  padding: 0.5rem 0 1.1rem 0;
   position: fixed;
   top: $top-nav-bar-height-mobile;
   display: flex;
